--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -1,11 +1,18 @@
 .jumbotron {
-	-moz-box-shadow:    inset 0 0 10px #dadfe4;
-	-webkit-box-shadow: inset 0 0 10px #dadfe4;
-	box-shadow:         inset 0 0 10px #dadfe4;
+	-moz-box-shadow:    inset 0 0 10px #666;
+	-webkit-box-shadow: inset 0 0 10px #666;
+	box-shadow:         inset 0 0 10px #666;
+	background-image: url('../../../assets/images/homeCover.jpg');
+	background-size: cover;
+	animation: rolling 5s infinite;
 }
 
-.jumbotron:hover {
+/* .jumbotron:hover {
 	-moz-box-shadow:    inset 0 0 10px #dadfee;
 	-webkit-box-shadow: inset 0 0 10px #dadfee;
 	box-shadow:         inset 0 0 10px #dadfee;
+} */
+
+@keyframes rolling {
+  50% {box-shadow: inset 0 0 10px #dadfee;}
 }
