--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="jumbotron text-center" style="margin-top: -25px;">
-  <h1 style="color: #fff; opacity: 0.8;">MEAN Stack Application</h1>
-  <p class="lead" style="color: #fff; opacity: 0.8;">Welcome to the MEAN Stack Application</p>
+  <h1 style="color: #fff; opacity: 0.8;">The Blog</h1>
+  <p class="lead" style="color: #fff; opacity: 0.8;">Welcome to the Blog</p>
   <div>
-    <a *ngIf="!authService.loggedIn()" routerLink="/register" class="btn btn-info">Register</a>
-    <a *ngIf="!authService.loggedIn()" routerLink="/login" href="#" class="btn btn-default">Login</a>
-    <a *ngIf="authService.loggedIn()" routerLink="/blog" href="#" class="btn btn-transparent">Blog</a>
+    <a *ngIf="!authService.loggedIn()" routerLink="/register" class="btn btn-transparent-outline">Register</a>
+    <a *ngIf="!authService.loggedIn()" routerLink="/login" href="#" class="btn btn-transparent">Login</a>
+    <a *ngIf="authService.loggedIn()" routerLink="/blog" href="#" class="btn btn-transparent-outline">Blog</a>
   </div>
 </div>
 
