--- a/client/src/app/components/blog/edit-blog/edit-blog.component.css
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.css
@@ -74,3 +74,16 @@
 .title-view input {
 	background-color: #f8f8fe;
 }
+
+.leadin-view {
+	padding: 12px 15px;
+	margin-top: 10px;
+	font-size: 1em;
+	letter-spacing: 0.6px;
+	text-align: justify;
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+.leadin-textarea {
+	height: 120px;
+}
