--- a/client/src/app/components/blog/edit-blog/edit-blog.component.css
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.css
@@ -63,6 +63,7 @@
 	font-size: 2rem;
 	font-weight: 600;
 	letter-spacing: 1px;
+	transition: none;
 }
 
 .title-view input[name="title"] {
@@ -82,6 +83,7 @@
 	letter-spacing: 0.6px;
 	text-align: justify;
 	font-family: Helvetica, Arial, sans-serif;
+	transition: none;
 }
 
 .leadin-textarea {
