--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -124,11 +124,11 @@ body {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 70px;
+	height: 0;
 	margin: 0;
 	display: grid;
 	flex-wrap: wrap;
-	z-index: 5000;
+	z-index: 200;
 }
 
 .row {
