--- a/client/src/app/components/blog/edit-blog/edit-blog.component.html
+++ b/client/src/app/components/blog/edit-blog/edit-blog.component.html
@@ -25,7 +25,7 @@
 		<p *ngIf="!editMode" class="ql-align-justify" [innerHTML]="leadinView"></p>
 	</div>
 
-	<app-quill-editor [ngClass]="toolbarClass"></app-quill-editor>
+	<app-quill-editor *ngIf="!loading" [ngClass]="toolbarClass"></app-quill-editor>
 	<br>
 
 	<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-secondary" (click)="goBack()">Back</button>
