--- a/client/src/app/modules/quill-editor/quill-editor/quill-editor.component.css
+++ b/client/src/app/modules/quill-editor/quill-editor/quill-editor.component.css
@@ -10,6 +10,10 @@
     border: 2px solid #00cd9a !important;
 }
 
+.ql-valid.ql-valid.ql-disabled {
+    border: 1px solid rgba(0,0,0,.15) !important;
+}
+
 .ql-invalid {
     border: 1px solid #e60039 !important;
 }
