--- a/client/src/app/components/blog/blog.component.css
+++ b/client/src/app/components/blog/blog.component.css
@@ -81,21 +81,6 @@ button.close{
 	cursor: pointer;
 }
 
-.card-title{
-	font-weight: 600;
-	font-size: 1.0rem;
-}
-
-.card-body{
-	padding: 1rem !important;
-	overflow-y: scroll;
-	max-height: 28rem;
-}
-
-.card-text{
-	font-size: 0.92rem;
-}
-
 .card-body::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 7px;
@@ -108,6 +93,7 @@ button.close{
 
 .card-footer{
 	padding: .35rem 1.25rem;
+	border-top: none;
 }
 .card-footer .btn{
 	opacity: 0.8;
@@ -120,35 +106,6 @@ button.close{
 
 .form-group{
 	width: 920px;
-}
-
-.form-error-msg{
-	width: 350px;
-	margin-top: 10px;
-	transition: none;
-}
-
-.form-error-msg .fa{
-	padding-right: 10px;
-	transition: none;
-}
-
-.has-error{
-	color: red;
-	transition: none;
-}
-
-.has-success{
-	color: green;
-	transition: none;
-}
-
-.has-success input, .has-success textarea{
-	border: 2px solid #00cd9a;
-}
-
-.has-error input, .has-error textarea{
-	border: 1px solid #e60039;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -189,10 +146,6 @@ button.close{
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
-}
-
-button[disabled] {
-	cursor: default;
 }
 
 .list-group-item {
