--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -235,3 +235,51 @@ body {
 @media screen and (max-width: 768px) {
     body { padding-top: 0px; }
 }
+
+button[disabled] {
+	cursor: default;
+}
+
+.has-error {
+	color: red;
+	transition: none;
+}
+
+.has-success {
+	color: green;
+	transition: none;
+}
+
+.has-success input, .has-success textarea{
+	border: 2px solid #00cd9a;
+}
+
+.has-error input, .has-error textarea{
+	border: 1px solid #e60039;
+}
+
+.card-title{
+	font-weight: 600;
+	font-size: 1.0rem;
+}
+
+.card-body{
+	padding: 1rem !important;
+	overflow-y: scroll;
+	max-height: 28rem;
+}
+
+.card-text{
+	font-size: 0.92rem;
+}
+
+.form-error-msg{
+	width: 350px;
+	margin-top: 10px;
+	transition: none;
+}
+
+.form-error-msg .fa{
+	padding-right: 10px;
+	transition: none;
+}
