--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center" style="margin-top: -25px;">
-  <h1 style="color: #fff; opacity: 0.8;">The Blog</h1>
-  <p class="lead" style="color: #fff; opacity: 0.8;">Welcome to the Blog</p>
+  <h1 style="color: #fff; opacity: 0.8;">The Blog</h1><br>
+  <!-- <p class="lead" style="color: #fff; opacity: 0.8;">Welcome to the Blog</p> -->
   <div>
     <a *ngIf="!authService.loggedIn()" routerLink="/register" class="btn btn-transparent-outline">Register</a>
     <a *ngIf="!authService.loggedIn()" routerLink="/login" href="#" class="btn btn-transparent">Login</a>
