--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -2,9 +2,8 @@
 <br>
 @<a href="http://blog.dedd.ca">blog.dedd.ca</a>
 <br><br>
-Last update: 2021-03-01
+Last update: 2021-06-20
 <br><br>
-Github: <a
-    href="https://github.com/garychan8523/mean-angular2-blog">https://github.com/garychan8523/mean-angular2-blog</a>
+Github: <a href="https://github.com/garychan8523/mean-angular2-blog">https://github.com/garychan8523/mean-angular2-blog</a>
 <br><br>
 Email: blog@dedd.ca
