--- a/client/src/app/components/blog/view-blog/view-blog.component.html
+++ b/client/src/app/components/blog/view-blog/view-blog.component.html
@@ -10,10 +10,11 @@
 	<app-quill-editor *ngIf="!loading" class="ql-hide"></app-quill-editor>
 	<br>
 
+	<div style="color: #666;">by <b>{{blog.createdBy}}</b> on {{ blog.createdAt | date: "dd MMM yyyy 'at' HH:mm" }}</div><br>
+	<!--  ‧ {{ blog.publishedAt?(blog.published?'Published':'Unpublished'):'Draft'}} -->
 	<button type="button" name="button" class="btn btn-sm btn-secondary" (click)="goBack()">Back</button>
 	<button *ngIf="authService.loggedIn() && username === blog.createdBy" [disabled]="loading" type="button" name="button" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/blog/setting/', blog._id]">Setting</button>
 	<button *ngIf="authService.loggedIn() && username === blog.createdBy" [disabled]="loading" type="button" name="edit" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/blog/update/', blog._id]">Edit</button>
-
 	<!-- <a *ngIf="editMode" [routerLink]="['/delete-blog/', blog._id]">
 		<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-danger btn-margin-left">Delete</button>
 	</a> -->
