--- a/client/src/app/components/blog/view-blog/view-blog.component.html
+++ b/client/src/app/components/blog/view-blog/view-blog.component.html
@@ -1,22 +1,23 @@
-<form *ngIf="!loading" class="view-container viewmode view-offset">
-	<div class="form-group">
+<form class="view-container viewmode view-offset">
+	<div *ngIf="loading" style="margin-top: 150px;">Loading ...<br><br></div>
+	<div *ngIf="!loading" class="form-group">
 		<div class="title-view">{{ blog.title }}</div>
 	</div>
 
-	<div class="leadin-view">
+	<div *ngIf="!loading" class="leadin-view">
 		<p class="ql-align-justify" [innerHTML]="leadinView"></p>
 	</div>
 
 	<app-quill-editor *ngIf="!loading" class="ql-hide"></app-quill-editor>
 	<br>
 
-	<div style="color: #666;">by <b>{{blog.createdBy}}</b> on {{ blog.createdAt | date: "dd MMM yyyy 'at' HH:mm" }}</div><br>
+	<div *ngIf="!loading" style="color: #666;">by <b>{{blog.createdBy}}</b> on {{ blog.createdAt | date: "dd MMM yyyy 'at' HH:mm" }}</div><br>
 	<!--  ‧ {{ blog.publishedAt?(blog.published?'Published':'Unpublished'):'Draft'}} -->
 	<button type="button" name="button" class="btn btn-sm btn-secondary" (click)="goBack()">Back</button>
-	<button *ngIf="authService.loggedIn() && username === blog.createdBy" [disabled]="loading" type="button" name="button" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/blog/setting/', blog._id]">Setting</button>
-	<button *ngIf="authService.loggedIn() && username === blog.createdBy" [disabled]="loading" type="button" name="edit" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/blog/update/', blog._id]">Edit</button>
+	<button *ngIf="authService.loggedIn() && username === blog.createdBy && !loading" [disabled]="loading" type="button" name="button" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/blog/setting/', blog._id]">Setting</button>
+	<button *ngIf="authService.loggedIn() && username === blog.createdBy && !loading" [disabled]="loading" type="button" name="edit" class="btn btn-sm btn-info btn-margin-left" [routerLink]="['/blog/update/', blog._id]">Edit</button>
 	<!-- <a *ngIf="editMode" [routerLink]="['/delete-blog/', blog._id]">
-		<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-danger btn-margin-left">Delete</button>
-	</a> -->
+			<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-danger btn-margin-left">Delete</button>
+		</a> -->
 	<!-- 	<button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-danger" (click)="resetForm()">Clear</button> -->
 </form>
