--- a/client/src/app/components/blog/update-blog/update-blog.component.html
+++ b/client/src/app/components/blog/update-blog/update-blog.component.html
@@ -17,7 +17,7 @@
     <!-- leadin input -->
     <!-- <label for="title"></label> -->
     <div [ngClass]="{'has-success': form.controls.leadin.dirty && form.controls.leadin.valid, 'has-error': form.controls.leadin.dirty && form.controls.leadin.errors}">
-        <textarea [disabled]="processing" name="leadin" class="form-control leadin-view leadin-textarea" maxlength="300" placeholder="Lead-in (optional)" formControlName="leadin" [autofocus]="true"></textarea>
+        <textarea [disabled]="processing" name="leadin" class="form-control leadin-view leadin-textarea" maxlength="300" placeholder="Lead-in (optional)" formControlName="leadin"></textarea>
         <div class="form-error-msg">
             <div *ngIf="(form.controls.leadin.dirty && form.controls.leadin.errors?.maxlength)">
                 <i class="fa fa-times"></i>Max length: 300
