implements endpoint for listing unpublished content and private content, update discard warning message, remove homepage placeholder content

--- a/client/src/app/components/blog/update-blog/update-blog.component.html
+++ b/client/src/app/components/blog/update-blog/update-blog.component.html
@@ -46,8 +46,7 @@
                 <button type="button" name="button" class="close" data-dismiss="modal" (click)="cancelAction()">&times;</button>
             </div>
             <div class="modal-body">
-                <p>Are you sure to discard this blog? Changes will be lost. You
-                    can use draft to save the blog with unpublished state.</p>
+                <p>Changes detected, Are you sure to discard your content? <b>Changes will be lost.</b> Subitted blog will be in unpublished(draft) state until published, you are welcome to come back and edit later. We recommand to save the blog first.</p>
             </div>
             <div class="modal-footer">
                 <button [disabled]="processing" type="button" name="button" class="btn btn-sm btn-secondary" (click)="cancelAction()">Back</button>
