--- a/client/src/app/components/profile/profile-components/published-private/published-private.component.html
+++ b/client/src/app/components/profile/profile-components/published-private/published-private.component.html
@@ -1,22 +1,22 @@
-<p>Follow content are never published, click on the heading and go to setting for publish.</p>
-<button [disabled]="loading" type="button" name="button" class="btn btn-sm btn-secondary btn-margin-left" (click)="getUnpublishedBlogs()"><span class="fas fa-redo-alt"></span> Refresh</button>
+<p>Follow content are set as unpublished(not visible to public), click on the heading and go to setting for publish.</p>
+<button [disabled]="loading" type="button" name="button" class="btn btn-sm btn-secondary btn-margin-left" (click)="getPrivateBlogs()"><span class="fas fa-redo-alt"></span> Refresh</button>
 <br><br>
 
-<table *ngIf="!loading && unpublishedBlogs" class="table table-sm">
+<table *ngIf="!loading && privateBlogs" class="table table-sm">
     <thead>
         <tr>
-            <th scope="col"># ({{ unpublishedBlogs.length }})</th>
+            <th scope="col"># ({{ privateBlogs.length }})</th>
             <th scope="col" style="width: 65%">Title</th>
             <th scope="col">Created on</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngIf="unpublishedBlogs.length == 0">
+        <tr *ngIf="privateBlogs.length == 0">
             <td colspan="3">
                 <center>No records</center>
             </td>
         </tr>
-        <tr *ngFor="let record of unpublishedBlogs">
+        <tr *ngFor="let record of privateBlogs">
             <td>{{ record._id | slice:0:7 }}</td>
             <td [routerLink]="['/blog/', record._id]" style="cursor: pointer;"><b>{{ record.title }}</b></td>
             <td>{{ record.createdAt | date: "dd MMM yyyy 'at' HH:mm" }}</td>
